[package]
name = "creamcone"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[lib]
name = "creamcone"
crate-type = ["rlib"]

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = "0.2.75"
wasm-bindgen-test = "0.3.25"

[[bin]]
name = "creamcone"
path = "src/main.rs"
